# trustable-grimoirelab-cli

./: README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: e2e-tests.yml  tests.yml
grimoirelab_metrics/: cli.py  metrics.py
tests/: run_tests.py  test_cli.py  test_end_to_end.py  test_metrics.py
tests/data/: events.json  one_repo.spdx.xml
tests/end_to_end/: base.py  test_cli.py
tests/unit/: test_cli.py  test_metrics.py
trustable_cli/: cli.py  grimoirelab_client.py  metrics.py
